# argos3-footbot-swarmnet

./: .gitignore  CMakeLists.txt  foraging.txt
controllers/: CMakeLists.txt
controllers/footbot_foraging/: footbot_foraging.cpp
controllers/footbot_simple_communication/: CMakeLists.txt  footbot_simple_communication.cpp  footbot_simple_communication.h
controllers/footbot_simple_swarmnet/: CMakeLists.txt  footbot_simple_swarmnet.cpp  footbot_simple_swarmnet.h  footbot_sn_driver.cpp  footbot_sn_driver.h  user_program.h
controllers/footbot_sn_edge_follower/: CMakeLists.txt  footbot_sn_driver.h  footbot_sn_edge_follower.cpp  footbot_sn_edge_follower.h  user_program.h
controllers/footbot_sn_edge_seed/: CMakeLists.txt  footbot_sn_driver.h  footbot_sn_edge_seed.cpp  footbot_sn_edge_seed.h  user_program.h
controllers/footbot_sn_firefly/: CMakeLists.txt  footbot_sn_driver.h  footbot_sn_firefly.cpp  footbot_sn_firefly.h  user_program.h
controllers/footbot_sn_firefly_new/: CMakeLists.txt  footbot_sn_driver.cpp  footbot_sn_driver.h  footbot_sn_firefly_new.cpp  footbot_sn_firefly_new.h  user_program.h
controllers/footbot_sn_hop_follower/: CMakeLists.txt  footbot_sn_driver.cpp  footbot_sn_driver.h  footbot_sn_hop_follower.cpp  footbot_sn_hop_follower.h  user_program.h
controllers/footbot_sn_hop_seed_1/: CMakeLists.txt  footbot_sn_hop_seed_1.cpp  footbot_sn_hop_seed_1.h  user_program.h
controllers/footbot_sn_hop_seed_2/: CMakeLists.txt  footbot_sn_driver.h  footbot_sn_hop_seed_2.cpp  footbot_sn_hop_seed_2.h  user_program.h
experiments/: footbot_sn_firefly.argos  (+5 more)
(+7 files in other folders)
