include_directories(${CMAKE_SOURCE_DIR}/controllers)

add_subdirectory(footbot_simple_communication)
add_subdirectory(footbot_simple_swarmnet)
add_subdirectory(footbot_sn_firefly)
add_subdirectory(footbot_sn_firefly_new)
add_subdirectory(footbot_sn_hop_seed_1)
add_subdirectory(footbot_sn_hop_seed_2)
add_subdirectory(footbot_sn_hop_follower)
add_subdirectory(footbot_sn_edge_seed)
add_subdirectory(footbot_sn_edge_follower)
